proj1 complete