@@ -1,9 +1,8 @@
 package gh2;
 
 // TODO: uncomment the following import once you're ready to start this portion
-// import deque.Deque;
-import java.util.ArrayDeque;
-import  java.util.Deque;
+import deque.*;
+
 import java.util.Random;
 // TODO: maybe more imports
 
@@ -27,7 +26,7 @@ public class GuitarString {
         //       cast the result of this division operation into an int. For
         //       better accuracy, use the Math.round() function before casting.
         //       Your should initially fill your buffer array with zeros.
-        buffer = new ArrayDeque<>();
+        buffer = new LinkedListDeque<Double>();
         int capactity = (int) (SR/frequency);
         for (int i = 0; i < capactity; i++) {
            // double n = Math.random()-0.5;
@@ -62,7 +61,7 @@ public class GuitarString {
         //       the average of the two multiplied by the DECAY factor.
         //       **Do not call StdAudio.play().**
         double first = buffer.removeFirst();
-        double second = buffer.getFirst();
+        double second = buffer.get(0);
          double three  =  DECAY *(0.5*(first+second));
          buffer.addLast(three);
     }
@@ -70,7 +69,7 @@ public class GuitarString {
     /* Return the double at the front of the buffer. */
     public double sample() {
         // TODO: Return the correct thing.
-        return buffer.getFirst();
+        return buffer.get(0);
     }
 }
     // TODO: Remove all comments that say TODO when you're done.
